@@ -4,6 +4,7 @@
 
 #include <string>
 #include <stdexcept>
+#include <cppunit/portability/Stream.h>    // or <iostream> if portability is not an issue
 
 class IncompatibleMoneyError : public std::runtime_error
 {
@@ -57,5 +58,16 @@ private:
   double m_amount;
   std::string m_currency;
 };
+
+
+// The function below could be prototyped as:
+// inline std::ostream &operator <<( std::ostream &os, const Money &value )
+// If you know that you will never compile on a platform without std::ostream
+// (such as embedded vc++ 4.0; though even that platform you can use STLPort)
+inline CPPUNIT_NS::OStream &operator <<( CPPUNIT_NS::OStream &os, const Money &value )
+{
+    return os << "Money< value =" << value.getAmount() << "; currency = " << value.getCurrency() << ">";
+}
+
 
 #endif
